# desktop-rescue

./: .gitignore  README.md  pyproject.toml
src/desktop_rescue/: cli.py  core.py  rules.py
tests/: test_rules.py
